base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: two-tier-app
  labels:
    app: two-tier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: two-tier-app
  template:
    metadata:
      labels:
        app: two-tier-app
    spec:
      serviceAccountName: two-tier-app-sa
      containers:
        - name: two-tier-app
          image: 140858350811.dkr.ecr.ap-south-1.amazonaws.com/exploreexpeditionsapp:e934bd340458b6d8d51b392bf7d2f028ddb6d34d
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
