base/app/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: two-tier-app
  labels:
    app: two-tier-app
spec:
  replicas: 2
  strategy:
    canary:
      stableService: two-tier-app-stable
      canaryService: two-tier-app-canary
      trafficRouting:
        alb:
          ingress: two-tier-app-ingress
          servicePort: 80
      analysis:
        templates:
          - templateName: pod-health-check
      steps:
        - setWeight: 10
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 60s
        - setWeight: 100
  selector:
    matchLabels:
      app: two-tier-app
  template:
    metadata:
      labels:
        app: two-tier-app
    spec:
      serviceAccountName: two-tier-app-sa
      containers:
        - name: two-tier-app
          image: 140858350811.dkr.ecr.ap-south-1.amazonaws.com/exploreexpeditionsapp:e934bd340458b6d8d51b392bf7d2f028ddb6d34d
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          startupProbe:
            httpGet:
              path: /healthy
              port: 5000
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthy
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthy
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
