base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: two-tier-app-stable
spec:
  selector:
    app: two-tier-app
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: two-tier-app-canary
spec:
  selector:
    app: two-tier-app
  ports:
    - port: 80
      targetPort: 5000
