base/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: two-tier-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:140858350811:certificate/b0f6a90a-cd9e-4962-ba25-c2ed93ee90c8
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/actions.root-service: >
     {"type":"forward","forwardConfig":{"targetGroups":[]}}
spec:
  ingressClassName: alb
  rules:
    - host: app.testpro.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: two-tier-app-stable
                port:
                  number: 80
